--- a/templates/nav.html
+++ b/templates/nav.html
@@ -15,8 +15,8 @@
         </div>
         <div class="ms-auto">
             <div class="navbar-nav">
-            {% if firstname %}
-                <h3 style="font-family: 'Courier New', Courier, monospace;color: green;">Welcome {{ firstname.title() }}</h3>
+            {% if f_name %}
+                <h3 style="font-family: 'Courier New', Courier, monospace;color: green;">Welcome {{ f_name.title() }}</h3>
             {% endif %}
             <br>
             <a href="/login" class="nav-link" style="color: black;">Logout</a>
