--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,17 +1,18 @@
 <section class="row">
-    <div style="background-color: rgb(225, 208, 186);">
+    <div style="background-color: transparent;">
     <!-- all styles of icons (in Font Awesome Classic by default) -->
-
-        <span style="font-size: 25px; color: blueviolet; margin-left: 10px;">
-            <i class="fa-brands fa-instagram"></i>
+        <br><br>
+        <h5 style="font-family: serif; color: blue;">Joke time</h5>
+        <span style="font-size: 22px; color: blueviolet; margin-left: 10px;">
+            <a href="https://www.instagram.com" style="color: black;font-family: serif;"><i class="fa-brands fa-instagram"></i>  &nbsp;&nbsp;Meet me on instagram as _dele.ali</a>
         </span>
         <br>
-        <span style="font-size: 25px; color: rgb(45, 46, 47); margin-left: 10px;">
-            <i class="fa-brands fa-x-twitter"></i>
+        <span style="font-size: 22px; color: rgb(45, 46, 47); margin-left: 10px;">
+            <a href="https://www.x.com" style="color: black;font-family: serif;"><i class="fa-brands fa-x-twitter"></i>  &nbsp;&nbsp;On X  @DeleiAlex</a>
         </span>
         <br>
-        <span style="font-size: 25px; color: rgb(13, 224, 30); margin-left: 10px;">
-            <a href=""></a><i class="fa-brands fa-whatsapp"></i>
+        <span style="font-size: 22px; color: rgb(13, 224, 30); margin-left: 10px;">
+            <a href="https://www.web.whatsap.com" style="color: black;font-family: serif;"><i class="fa-brands fa-whatsapp fa-shake" style="color: #24e527;"></i></a>
         </span>
         <br>
         <a href="/change_password" style="color: blue;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Need to change Password?</a>
