--- a/templates/nav3.html
+++ b/templates/nav3.html
@@ -1,6 +1,9 @@
 <section class="row">
     <div class="navbar navbar-expand-lg" style="background-color: antiquewhite;">
-        <a href="#" class="navbar-brand text-dark" style="font-family: fantasy;">SHOE CO™</a>
+        <a href="/" class="navbar-brand text-dark" style="font-family: fantasy;">
+            <img src="../static/files/images/s-golden-7030451_640.jpg" alt=""  width="55px" height="43px" style="border-radius: 7px;">
+            SHOE CO™
+        </a>        
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
