--- a/templates/update.html
+++ b/templates/update.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../static/files/images/s-golden-7030451_640.jpg" type="image/jpg" sizes="32x32">
     <title>Password_Update</title>
     <link rel="stylesheet" href="../static/files/css/lightslider.css">
     <link rel="stylesheet" href="../static/files/css/bootstrap.min.css">
