--- a/templates/nav2.html
+++ b/templates/nav2.html
@@ -17,9 +17,7 @@
     <section class="row">
         <div class="navbar navbar-expand-lg" style="background-color: antiquewhite;">
             <a href="/" class="navbar-brand text-dark" style="font-family: fantasy;">
-                <span style="font-size: 25px; color: rgb(116, 79, 113);">
-                    <i class="fa-solid fa-shoe-prints"></i>
-                </span>
+                <img src="../static/files/images/s-golden-7030451_640.jpg" alt=""  width="55px" height="43px" style="border-radius: 7px;">
                 SHOE CO™
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar">
